--- a/main.css
+++ b/main.css
@@ -106,6 +106,10 @@ html {
   background-size: cover;
 }
 
+.titlepage {
+  text-align: center;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
