--- a/main.css
+++ b/main.css
@@ -134,6 +134,7 @@ a {
   margin: 0;
   padding: 0;
   font-size: 3em;
+  font-family: 'Rubik Mono One', sans-serif;
 }
 
 .logo-top {
@@ -149,8 +150,9 @@ a {
 
 .logo-bott2 {
   margin: 0;
+  padding-top: .2em;
   position: absolute;
-  letter-spacing: .2em;
+  
 }
 
 
@@ -160,13 +162,13 @@ nav {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  font-family: 'Anton', sans-serif;
 }
 
 nav ul {
   display: flex;
   width: 100%;
   padding: 0;
-  align-items: flex-end;
   position: fixed;
   bottom: 0;
 }
