--- a/main.css
+++ b/main.css
@@ -133,7 +133,7 @@ a {
   left: 10%;
   margin: 0;
   padding: 0;
-  font-size: 3em;
+  font-size: 5em;
   font-family: 'Rubik Mono One', sans-serif;
 }
 
@@ -162,19 +162,29 @@ nav {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  font-family: 'Anton', sans-serif;
+  font-family: 'Karla', sans-serif;
+  font-size: 1.5em;
+  margin-left: 2em;
 }
 
 nav ul {
   display: flex;
   width: 100%;
   padding: 0;
+  margin: 0;
   position: fixed;
   bottom: 0;
+  text-decoration: underline;
 }
 
 nav ul li {
-  padding: 5px;
+  padding: 2px;
+  letter-spacing: 1px;
+}
+ 
+nav a:hover {
+  color: white;
+  background: black;
 }
 
 /* ==========================================================================
