--- a/main.css
+++ b/main.css
@@ -163,17 +163,11 @@ h1 {
 /*small logo on other pages used as home link*/
 .logosmall { 
   position: absolute;
-  margin: 1em;
-  margin-top:1em;
-  padding: 0;
+  margin: 0;
+  padding: 2em;
   right: 0;
   font-size: 1em;
   font-family: 'Rubik Mono One', sans-serif;
-}
-
-.logosmall .logo-top {
-  padding: 0;
-  margin: 0;
 }
 
 
