--- a/main.css
+++ b/main.css
@@ -128,7 +128,7 @@ h1 {
 }
 
 .wrapper > * {
-  padding: 20px;
+  margin: 20px;
 }
 
 /*logo*/
@@ -163,12 +163,11 @@ h1 {
 /*small logo on other pages used as home link*/
 .logosmall { 
   position: absolute;
-  margin: 0;
-  padding: 2em;
+  margin: 3em;
+  padding: 0;
   right: 0;
-  font-size: 1em;
+  font-size: .7em;
   font-family: 'Rubik Mono One', sans-serif;
-  background: black;
 }
 
 /*navigation*/
