--- a/main.css
+++ b/main.css
@@ -171,6 +171,10 @@ h2 {
    flex-direction: row; 
 }
 
+.hook h2 {
+   justify-content: space-between;
+}
+
 
 /*small logo on other pages used as home link*/
 .logosmall { 
