--- a/main.css
+++ b/main.css
@@ -192,12 +192,12 @@ h2 {
 
 /*navigation*/
 nav {
-  display: flex;
-  flex-wrap: wrap;
+  position: fixed;
   justify-content: center;
   font-family: 'Karla', sans-serif;
   font-size: 1.5em;
   margin-left: 2em;
+  bottom: 0;
 }
 
 nav ul {
@@ -205,8 +205,6 @@ nav ul {
   width: 100%;
   padding: 0;
   margin: 0;
-  position: fixed;
-  bottom: 0;
   text-decoration: underline;
 }
 
@@ -227,6 +225,9 @@ nav a:hover {
   padding: 0;
 }
 
+.problemstatement h1 {
+  display: none;
+}
 
 
 /* ==========================================================================
