--- a/main.css
+++ b/main.css
@@ -107,6 +107,13 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  background-image: url("mesh_linework.png");
+  width: 100%;
+  padding: 0;'
+  margin: 0;
+}
+
 ul {
   list-style: none;
 }
