--- a/main.css
+++ b/main.css
@@ -103,16 +103,17 @@ html {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
   scroll-behavior: smooth;
 }
 
+/*
 body {
-  background-image: url("mesh_linework.png");
-  width: 100%;
-  padding: 0;'
-  margin: 0;
+  background-image: url('mesh_linework.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
 }
+*/
 
 ul {
   list-style: none;
@@ -131,6 +132,20 @@ h2 {
    font-family: 'Karla', sans-serif;
 }
 
+/*background image*/
+.background-img {
+  position: relative;
+}
+
+.background-img img {
+  position: fixed;
+  z-index: -10;
+  width: 100%;
+  height: auto;
+  left: 0;
+  top: 0;
+  opacity: 0.5;
+}
 /*container*/
 .wrapper {
   display: flex;
