--- a/main.css
+++ b/main.css
@@ -106,14 +106,9 @@ html {
   scroll-behavior: smooth;
 }
 
-/*
 body {
-  background-image: url('mesh_linework.png');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100%;
+  
 }
-*/
 
 ul {
   list-style: none;
@@ -140,54 +135,51 @@ h2 {
 .background-img img {
   position: fixed;
   z-index: -10;
-  width: 100%;
+  max-width: 100%;
   height: auto;
-  left: 0;
-  top: 0;
   opacity: 0.5;
 }
 /*container*/
 .wrapper {
-  position: relative;
+  display: flex;
+  width: 64em;
   height: 100vh;
 }
 
 .wrapper > * {
-  margin: 20px;
+  margin: 1.25em;
 }
 
 /*logo*/
 
 .logo {
-  position: absolute;
+  justify-content: flex-start;
   width: 50%;
-  left: 30;
-  margin: 0;
-  padding: 0;
+  margin-left: 0.875em;
   font-size: 5em;
   font-family: 'Rubik Mono One', sans-serif;
 }
 
 .logo-top {
-  margin: 0;
-  padding: 0;
+  margin: 0em;
+  padding: 0em;
 }
 
 .logo-bott1 {
-  margin: 0;
-  padding-bottom: 1.25em;
-  position: absolute;
+  margin: 0em;
+  padding: 0em;
+  
 }
 
 .logo-bott2 {
-  margin: 0;
-  padding-top: .2em;
-  position: absolute;
+  margin: 0em;
+  padding: 0em;
+  line-height: .3;
 }
 
 /* hook */
 .hook {
-   display: flex;
+    margin: auto;
    justify-content: center;
    align-items: center;
    height: 100vh;
