nav bar is still broken

--- a/main.css
+++ b/main.css
@@ -142,6 +142,7 @@ h2 {
 /*container*/
 .wrapper {
   display: flex;
+  flex-direction: column;
   height: 100vh;
 }
 
@@ -152,7 +153,6 @@ h2 {
 /*logo*/
 
 .logo {
-  justify-content: flex-start;
   width: 50%;
   font-size: 5em;
   font-family: 'Rubik Mono One', sans-serif;
@@ -178,6 +178,8 @@ h2 {
 /* hook */
 .hook {
   margin: auto;
+  display: flex;
+  align-items: center;
 }
 
 .hook h2 {
@@ -189,22 +191,20 @@ h2 {
 
 /*navigation*/
 nav {
+  display: flex;
+  align-items: center;
+  width: 100%;
   font-family: 'Karla', sans-serif;
   font-size: 1.5em;
-  display: flex;
-  bottom: 0;
 }
 
 nav ul {
-  justify-content: flex-start;
   padding: 0;
   margin: 0;
   text-decoration: underline;
 }
 
 nav ul li {
-  padding: 2px;
-  letter-spacing: 1px;
 }
  
 nav a:hover {
