--- a/main.css
+++ b/main.css
@@ -141,8 +141,7 @@ h2 {
 }
 /*container*/
 .wrapper {
-  display: flex;
-  flex-direction: column;
+  position: relative;
   height: 100vh;
 }
 
@@ -153,6 +152,7 @@ h2 {
 /*logo*/
 
 .logo {
+  display: absolute;
   width: 50%;
   font-size: 5em;
   font-family: 'Rubik Mono One', sans-serif;
@@ -177,40 +177,42 @@ h2 {
 
 /* hook */
 .hook {
-  margin: auto;
   display: flex;
-  align-items: center;
+  align-items: center
+  justify-content: center;
 }
 
 .hook h2 {
    width: 18.75em;
-   height: 6.25em;
    background-color: white;
    padding: 1em;
 }
 
 /*navigation*/
 nav {
-  display: flex;
-  align-items: center;
+  position: fixed;
+  bottom: 0;
   width: 100%;
+}
+nav ul {
+  float: left;
+  display: block;
   font-family: 'Karla', sans-serif;
   font-size: 1.5em;
-}
-
-nav ul {
+  text-decoration: underline;
   padding: 0;
   margin: 0;
-  text-decoration: underline;
 }
 
 nav ul li {
+  padding: .1em;
 }
- 
+
 nav a:hover {
   color: white;
   background: black;
 }
+
 
 /*problem statement page*/
 
@@ -315,6 +317,26 @@ nav a:hover {
 
 @media only screen and (min-width: 35em) {
   /* Style adjustments for viewports that meet the condition */
+}
+
+@media all and (max-width: 600px) {
+  nav ul {
+    flex-wrap: wrap;
+  }
+  
+  nav ul > li {
+    flex-basis: 50%;
+  }
+}
+
+@media all and (max-width: 400px) {
+  nav ul > li {
+    flex-basis: 100%;
+  }
+  
+  .movingforward {
+    order: 1;
+  }
 }
 
 @media print,
