--- a/main.css
+++ b/main.css
@@ -141,8 +141,7 @@ h2 {
 }
 /*container*/
 .wrapper {
-  position: relative;
-  height: 100%;
+  height: 100vh;
 }
 
 .wrapper > * {
@@ -183,7 +182,6 @@ header {
   display: flex;
   align-items: center
   justify-content: center;
-  height: 100%;
   margin: 0;
 }
 
@@ -195,14 +193,13 @@ header {
 
 /*navigation*/
 nav {
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
   margin: 0;
 }
 nav ul {
-  display: block;
-  float: left;
+  position: fixed
   font-family: 'Karla', sans-serif;
   font-size: 1.5em;
   text-decoration: underline;
