--- a/main.css
+++ b/main.css
@@ -186,8 +186,9 @@ header {
 .hook h2 {
   display: inline-block;
   background-color: white;
-  width: 25em;
+  width: 22em;
   font-size: 2vw;
+  line-height: 1.2;
 }
 
 /*navigation*/
