--- a/main.css
+++ b/main.css
@@ -157,7 +157,7 @@ header {
 
 .logo {
   width: 50%;
-  font-size: 7vw;
+  font-size: calc(5em + 0.5vw);
   font-family: 'Rubik Mono One', sans-serif;
 }
 
