--- a/main.css
+++ b/main.css
@@ -106,10 +106,6 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
-  
-}
-
 ul {
   list-style: none;
 }
@@ -127,17 +123,23 @@ h2 {
    font-family: 'Karla', sans-serif;
 }
 
-/*background image*/
-.background-img {
-  position: relative;
-  margin: auto;
+p {
+  font-family: 'Karla', sans-serif;
+  font-weight: 200;
+  font-size: 1em;
 }
 
-.background-img img {
+/*background image*/
+.background-img {
+  width: 100%;
   position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: -10;
-  max-width: 100%;
-  height: auto;
+}
+.background-img img {
+  width: 100%;
   opacity: 0.5;
 }
 /*container*/
@@ -221,8 +223,22 @@ header {
   padding: 0;
 }
 
-.problemstatement h1 {
+.content {
+  text-align: left;
+  width: 60em;
+  height: 100vh;
+  padding: 0;
+  margin: auto;
+  
+}
 
+.content p {
+  column-count: 2;
+  column-gap: 4em;
+  display: inline-block;
+  background-color: white;
+  padding: 2em;
+  
 }
 
 
