--- a/main.css
+++ b/main.css
@@ -128,7 +128,11 @@ p {
   font-weight: 200;
   font-size: 1em;
 }
-
+hr {
+  width: 50%;
+  border-width: 3px;
+  margin: 0;
+}
 /*background image*/
 .background-img {
   width: 100%;
@@ -225,16 +229,12 @@ header {
 
 .content {
   text-align: left;
-  width: 60em;
-  height: 100vh;
-  padding: 0;
+  width: 75%;
   margin: auto;
   
 }
 
 .content p {
-  column-count: 2;
-  column-gap: 4em;
   display: inline-block;
   background-color: white;
   padding: 2em;
