--- a/main.css
+++ b/main.css
@@ -119,6 +119,10 @@ h1 {
   font-family: 'Rubik Mono One', sans-serif;
 }
 
+.underline h1 {
+  text-decoration: underline;
+}
+
 h2 {
    font-family: 'Karla', sans-serif;
 }
@@ -163,6 +167,7 @@ header {
 .logo {
   font-size: 4em;
   font-family: 'Rubik Mono One', sans-serif;
+  text-decoration: none;
 }
 
 .logo-top {
