--- a/main.css
+++ b/main.css
@@ -262,47 +262,60 @@ header {
   flex-wrap: wrap;
   justify-content: center;
 }
-.imagecontainer {
-  display: inline-block;
-  width: calc(50%-.15em);
-  margin: .5em;
-}
-
-.imagegrid a {
-  
-  margin-bottom: .5em;
-  
-  margin-right: .5em;
-  text-decoration: none;
-  color: black;
-}
 
 .imagegrid a:nth-of-type(2n) {
   margin-right: 0;
 }
 
-.imagegrid a:hover img {
-  transform: scale(1.15);
+.imagecontainer {
+  width: 25%;
+  margin: .5em;
 }
 
-.imagegrid figure {
+.imagecontainer a {
+  text-decoration: none;
+  color: black;
+}
+
+.imagecontainer img {
+  width: 25%;
+  position: absolute;
+  /*
+  position: absolute;
+  width: 25%;
+  */
+  
+  /*
+  
+  margin: .5em;
+  background: #ccc;
+  transition: transform .2s ease-in-out;
+  */
+}
+
+.text-wrapper {
+  position: relative;
+  width: 19.9em;
+  height: 19.9em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  color: #fff;
+  background: black;
+  opacity: 0;
   margin: 0;
+  padding: 0;
   overflow: hidden;
 }
 
-.imagegrid figcaption {
-  margin-top: 0.9375em;
+.text-wrapper:hover {
+  transition: all 0.8s ease;
+  background: rgba(0, 0, 0, 0.6);
+  opacity: 1;
 }
 
-.imagegrid img {
-  object-fit: cover;
-  border: none;
-  max-width: 100%;
-  height: auto;
-  display: block;
-  background: #ccc;
-  transition: transform .2s ease-in-out;
-}
+/*transform: scale(1.02);*/
 
 
 /* ==========================================================================
@@ -414,7 +427,7 @@ header {
   }
 }
 
-@media all and (max-width: 959px) and (min-width: 600px) {
+@media all and (max-width: 968px) and (min-width: 600px) {
   body{
       font-size: 12px;
   }
@@ -426,7 +439,13 @@ header {
   nav ul > li {
     flex-basis: 50%;
   }
+
+  .text-wrapper {
+    opacity: 1;
+    justify-content: flex-end;
+    text-shadow: 1px 1px 1px #000;
 }
+
 
 @media all and (max-width: 650px) and (min-width: 320px) {
   body{
@@ -448,6 +467,11 @@ header {
   .movingforward {
     order: 1;
   }
+
+  .text-wrapper {
+    opacity: 1;
+    justify-content: flex-end;
+    text-shadow: 1px 1px 1px #000;
 }
 
 @media print,
