--- a/main.css
+++ b/main.css
@@ -156,14 +156,6 @@ hr {
   height: 100vh;
 }
 
-#P2 {
-  height: 100vh;
-}
-
-#P3 {
-  height: 100vh;
-}
-
 #P6 {
   height: 100vh;
 }
@@ -174,6 +166,28 @@ hr {
 
 .wrapper > * {
   margin: 1.25em;
+}
+
+.content {
+  text-align: left;
+  width: 75%;
+  margin: auto;
+
+}
+
+.content p {
+  display: inline-block;
+  background-color: white;
+  padding: 2em;
+
+}
+
+.line {
+  border-left: 2px solid black;
+  height: 30em;
+  position: relative;
+  left: 50%;
+  width: 2em;
 }
 
 /*logo*/
@@ -246,7 +260,7 @@ header {
 /*problem statement page*/
 
 .problem {
-  width: 50em;
+  width: 75%;
   margin: auto;
 
 }
@@ -265,72 +279,41 @@ header {
   padding: 0;
 }
 
-.content {
-  text-align: left;
-  width: 75%;
+.think {
+  text-align: center;
   margin: auto;
   
 }
 
-.content p {
+.think h2 {
   display: inline-block;
-  background-color: white;
-  padding: 2em;
+  padding: .5em;
   
 }
 
 /*inspiration page*/
 
-.grid-container {
- 
-  margin: 0 auto;
-  z-index: -5;
+.inspogrid {
+  display: grid;
+  grid-gap: .3125em;
+  grid-template-columns: repeat(4, auto);
+  grid-template-rows: auto;
+  align-items: center;
+  justify-items: center;
 }
 
-.imagegrid {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+.inspocontainer img{
+  width: 100%;
 }
 
-.imagecontainer {
-  
-  width: 20em;
-  height: 20em;
-  margin: .5em;
-}
-
-.imagecontainer img {
-  position: absolute;
-  object-fit: fill;
-  
-}
-
-.text-wrapper {
-  position: relative;
-  width: 16em;
-  height: 16em;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  color: #fff;
-  opacity: 0;
-  margin: 0;
-  overflow: hidden;
-}
-
-.text-wrapper:hover {
-  transition: all 0.6s ease;
-  background: rgba(241, 18, 11, 0.9);
+.inspocontainer .text {
   font-family: 'Karla', sans-serif;
-  opacity: 1;
+  font-size: .8em;
+  background-color: white;
+  padding: .4em;
 }
 
-.text-wrapper .text {
-  font-size: 2em;
 
-}
 
 /* Research Page */
 
@@ -493,6 +476,14 @@ header {
     flex-basis: 50%;
   }
 
+  .inspogrid {
+    grid-template-columns: repeat(2, auto);
+  }
+
+  .inspocontainer .text {
+    font-size: 12px;
+  }
+
   .text-wrapper {
     opacity: 1;
     justify-content: flex-end;
@@ -522,17 +513,23 @@ header {
     order: 1;
   }
 
-  .text-wrapper {
-    opacity: 1;
-    justify-content: flex-end;
-    text-shadow: 1px 1px 1px #000;
-}
+  .inspogrid {
+    grid-template-columns: repeat(1, auto);
+  }
+
+  .line {
+    width: 1em;
+  }
 }
 
 @media all and (max-width: 320px) {
   body{
     font-size: 12px;
 }
+
+  .line {
+    width: 1em;
+  }
 }
 @media print,
   (-webkit-min-device-pixel-ratio: 1.25),
