--- a/main.css
+++ b/main.css
@@ -156,10 +156,6 @@ hr {
   height: 100vh;
 }
 
-#P6 {
-  height: 100vh;
-}
-
 #P8 {
   height: 100vh;
 }
@@ -334,6 +330,28 @@ header {
 
 /* Process page */
 
+.processgrid {
+  display: grid;
+  grid-gap: .3125em;
+  grid-template-columns: repeat(2, auto);
+  align-items: center;
+  justify-items: center;
+  
+}
+
+.processgrid img {
+  width: 100%;
+}
+
+.item1center {
+  grid-column: 1 / 3;
+  width: 50%;
+}
+
+.item2center {
+  grid-column: 1 / 3;
+  width: 50%;
+}
 
 
 /* final page */
