--- a/main.css
+++ b/main.css
@@ -292,13 +292,13 @@ header {
 
 .think {
   text-align: center;
-  margin: auto;
 
 }
 
 .think h2 {
   display: inline-block;
   padding: .5em;
+  font-size: 2.2em;
 
 }
 
@@ -378,6 +378,7 @@ header {
 .weblink h2 {
   text-align: center;
   text-decoration: underline;
+  font-size: 2.2em;
 }
 
 .weblink h2:hover {
@@ -474,8 +475,9 @@ header {
 
   .final p {
     display: inline-block;
-    font-size: 2.2em;
+    font-size: 2.7em;
     background-color: transparent;
+    font-weight: bold;
   }
 
   .thankyou {
@@ -485,6 +487,7 @@ header {
   .thankyou p {
     display: inline-block;
     font-size: 4em;
+    font-weight: bold;
   }
 
 
